# stviz-animate

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: release-checks.yml
assets/: icon.icns  pointcloud.wgsl
docs/: stviz-animate_documentation.md  stviz_documentation.html  stviz_tutorial.html  technical_documentation.md
python/: export_stviz.py  export_video_cv2.py  mock_spatial_dataset.py
scripts/: package_mac.sh  package_ubuntu.sh  package_windows.ps1
src/: app.rs  camera.rs  color.rs  data.rs  main.rs  render.rs
