[package]
name = "stviz-animate"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
colorous = "1.0.16"
eframe = { version = "0.33.3", default-features = false, features = ["wgpu", "default_fonts", "x11", "wayland"] }
egui-wgpu = "0.33.3"
image = "0.25"
memmap2 = "0.9"
parking_lot = "0.12"
rand = "0.8"
rfd = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
